--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@a1rth/css-normalize": "^1.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
