--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,13 @@
 {
   "compilerOptions": {
+    /*Aliases*/
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@assets/*": ["src/assets/*"]
+    },
+
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
