--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "sass": "^1.79.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
