--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx",
-    "preview": "vite preview"
+    "lint": "ESLINT_USE_FLAT_CONFIG=true npx eslint . --report-unused-disable-directives --max-warnings 0 && stylelint '**/*.css' --max-warnings 0",
+    "lint:fix": "eslint . --fix && stylelint '**/*.css' --fix",
+    "preview": "vite preview",
+    "prettier": "prettier . --check --ignore-unknown",
+    "prettier:fix": "prettier . -w"
   },
   "dependencies": {
     "@a1rth/css-normalize": "^1.1.3",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
@@ -30,7 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
+    "typescript-eslint": "^8.8.1",
     "vite": "^5.4.1"
   }
 }
