--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         run: npm install
       - name: build project
         run: npm run build
+      - name: use lint
+        run: npm run lint
       - name: use prettier
         run: npm run prettier
-      - name: use prettier:fix
-        run: npm run prettier:fix
